test/TestPhases/parser/valid/stringbackslash.blc

@[CFunction (binding = """single backslash \\ hello""" , header= "bla.h")]
extern function singleBackslash()

@[EntryPoint]
activity main()()
    await true
end


