test/TestPhases/parser/invalid/stringbackslash.blc

@[CFunction (binding = "no escape sequence \hello" , header= "bla.h")]
extern function noEscape()

@[EntryPoint]
activity main()()
    await true
end


